<resources>
    <string name="app_name">Sifac</string>
    <string name="login.message.user">Ingresar usuario</string>
    <string name="login.message.password">Ingresar contraseña</string>
    <string name="login.button.SingIn">Ingresar</string>

    <string name="login.message.username.Error">Usuario Inválido</string>
    <string name="login.message.password.Error">Password Inválido</string>
    <string name="invalid_user">Usuario No Valido</string>
    <string name="auth_type">com.ni.SifacCode</string>

    <string name="login.message.footer">Todos los derechos reservados 2016</string>

    <string name="customer.detail.fecha_abono">Fecha de abono :</string>
    <string name="customer.detail.cuota">Cuota :</string>
    <string name="customer.detail.saldo">Saldo Pendiente :</string>
    <string name="customer.detail.detailtitle">Detalle del Abono</string>
    <string name="abonar">ABONAR</string>
    <string name="Noabonar">NO ABONO</string>
    <string name="customer.form.names">Ingresar nombre</string>
    <string name="customer.form.lastname">Ingresar apellidos</string>
    <string name="customer.form.CID">Ingresar cedula</string>
    <string name="customer.form.genero.male">Másculino</string>
    <string name="customer.form.genero.female">Femenino</string>
    <string name="customer.form.phone">Ingrese teléfono</string>
    <string name="customer.form.city">Ingresar Ciudad</string>
    <string name="customer.form.country">Ingresar País</string>
    <string name="customer.form.ruta">Ingrese la Ruta</string>
    <string name="customer.form.address">Ingresar dirección</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="action_settings">Settings</string>

    <string name="menu_title">DISTRIBUIDORA MEZA</string>
    <string name="cartera_item">CARTERA</string>
    <string name="ventas_item">REGISTRO DE VENTAS</string>
    <string name="devolucion_item">DEVOLUCIONES</string>
    <string name="encargos_item">ENCARGOS</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item"></string>


</resources>
