<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cartera"
            android:checked="true"
            android:color="@color/White"
            android:title="@string/cartera_item" />
        <item
            android:id="@+id/nav_ventas"
            android:color="@color/White"
            android:title="@string/ventas_item" />
        <item
            android:id="@+id/nav_devoluciones"
            android:color="@color/White"
            android:title="@string/devolucion_item" />
        <item
            android:id="@+id/nav_encargos"
            android:color="@color/White"
            android:title="@string/encargos_item" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/log_out_item" />


        <!-- Sección de configuración -->
        <!-- <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item> -->
    </group>

</menu>
